The whitespace to the right started showing up on mobile. Some images were causing the issue and I'm fairly certain a div that is larger than it ought to be is causing the minor overflow on mobile Chrome and FireFox. Oddly enough the overflow doesn't show on IE11. Also made some media query changes. For now the slight Whitespace is there.

--- a/css/groud-frank-ie.css
+++ b/css/groud-frank-ie.css
@@ -9,6 +9,7 @@ html{
 
 body{
     position: relative;
+    width: 100vw;
     max-width: 100vw;
     height: auto;
     /* overflow-x: hidden; */
@@ -230,8 +231,10 @@ h4{
   align-items: center;
   position: fixed;
   z-index: 15;
-  top: 1%;
-  right: 0px;
+  top: 0;
+  right: 0;
+  left: 1;
+  bottom: 1;
   margin: 0px 10px 0px 0px;
   border-radius: 5%;
   transition: transform 0.3s ease-in-out;
@@ -293,8 +296,12 @@ transform: scale(1.05);
   text-decoration: none;
   text-align: center;
   position: absolute;
-  bottom: 0;
+  top:auto;
+  right: 0;   
+  left: 0;
+  bottom:0;
   padding: 0px;
+  margin: 0px;
 }
 
 #custom-nav .nav-contact-ul .nav-contact-li{
@@ -313,7 +320,7 @@ transform: scale(1.05);
 
 #pseudo-body{
   position: relative;
-  width: 100%;
+  width: 100vw;
   height: 100%;
 }
 
@@ -501,7 +508,7 @@ transform: scale(1.05);
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 400px;
+  width: auto;
   margin: 0px auto 0px auto;
 }
 
@@ -888,7 +895,7 @@ transform: scale(1.05);
 #future .future-plans-layout{
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   justify-content: center;
   align-items: center;
   width: 100%;
@@ -920,7 +927,7 @@ transform: scale(1.05);
 #future .future-plans-layout-reverse{
   display: flex;
   flex-direction: row-reverse;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   justify-content: center;
   align-items: center;
   width: 100%;
@@ -1010,7 +1017,7 @@ transform: scale(1.05);
 #fancies .fancies-layout{
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   justify-content: center;
   align-items: center;
   width: 100%;
@@ -1043,7 +1050,7 @@ transform: scale(1.05);
 #fancies .fancies-layout-reverse{
   display: flex;
   flex-direction: row-reverse;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   justify-content: center;
   align-items: center;
   width: 100%;
@@ -1334,7 +1341,7 @@ transform: scale(1.05);
   justify-content: center;
   align-items: center;
   /* border: 1px solid black; */
-  width: 100%;
+  width: 100vw;
   min-height: 100vh;
   padding: 100px;
   position: relative;
@@ -2271,6 +2278,13 @@ background: #3f3e44 !important;
   }
 }
 
+@media (max-width: 768px) {
+  .card-pic-format{
+      width: 250px;
+      height: 250px;
+  }
+}
+
 @media only screen  and (min-width : 2000px) {
   .card-pic-format{
     width: calc(300px * 1.2);
@@ -2391,7 +2405,6 @@ background: #3f3e44 !important;
 @media (max-width: 768px) {
     #greeter-breaker-h1{
         font-size: 2.25em;
-        left: 10%;
     }
 }
 
@@ -2421,6 +2434,13 @@ background: #3f3e44 !important;
   }
 }
 
+@media (max-width: 768px) {
+  #greeter-breaker img{
+    width: 283px;
+    height: 478px;
+  }
+}
+
 @media only screen  and (min-width : 2000px) {
   #greeter-breaker img{
     width: calc(783px * 1.2);
@@ -2442,12 +2462,6 @@ background: #3f3e44 !important;
   }
 }
 
-@media (max-width: 500px) {
-    #me-pic-div{
-        width: 250px !important;
-        height: 250px !important;
-    }
-}
 
 @media (max-width: 768px) {
     .me-card-icons div{
@@ -2875,8 +2889,8 @@ background: #3f3e44 !important;
 
 @media (max-width: 768px) {
     #services-linux-img img{
-        width: 426px;
-        height: 250px;
+        width: 326px;
+        height: 200px;
     }
 }
 
@@ -2907,13 +2921,6 @@ background: #3f3e44 !important;
         padding: 10px;
         text-align: center;
     }
-}
-
-@media (max-width: 500px) {
-  #contact-pic-div{
-      width: 250px !important;
-      height: 250px !important;
-  }
 }
 
 @media (max-width: 500px) {
